2009-06-17  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/util/hd-util.c (hd_util_modal_blocker_realize): Add argument for
	saying that only ping is desired, not delete event.
	* src/mb/hd-note.c: Create modal blocker for confirmation notes, too,
	but do not delete them, just ping them to detect a jammed application.
	Fixes: NB#112165

2009-06-17  Jan Arne Petersen  <jpetersen@openismus.com>

	Fixes: NB#120157 - applets on the deactivated home are some times
	appearing on the present active home for a small instance of time.

	* src/home/hd-home-view.c (close_applet): Hide clutter actor when
	closing.

2009-06-17  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#122941 App window need information about state when it is visible
		  in task-switcher and not visible at all

	* src/home/hd-render-manager.c (hd_rener_manager_set_state):
	  Change _MB_WM_CURRENT_APP_WIN such that 0xFFFFFFFF indicates
	  we're in tasw.

2009-06-17  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Improved waking up hibernated apps, for NB#121512.

	* src/home/hd-switcher.c: If still loading, go to switcher or home when	the
	loading fail appears.
	* src/launcher/hd-app-mgr.c:
	  - Time waking up, send loading-fail if app doesn't appear.
	  - Retry waking up if app closes after trying to wake up, in case the user
	  switches back to it really fast.
	  - Listen to d-bus name changes for loading and waking apps (thanks, Adam!).
	* src/launcher/hd-running-app.c:
	* src/launcher/hd-running-app.h: New state HD_APP_STATE_WAKING.
	* src/mb/hd-comp-mgr.c:

2009-06-17  Laszlo Pere  <lpere@blumsoft.eu>

	NB#114610: ROTATION: Misplaced status area separator in portrait mode.

	* src/home/hd-title-bar.c: Fixed separator placement.

2009-06-17  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	NB#23246 hildon-desktop crashed.

	(crash != abort)

	* src/mb/hd-note.c:
	  mb_wm_util_trap_x_errors()

2009-06-17  Adam Endrodi  <adam.endrodi@blumsoft.eu>
